# mcp-studies

./: .env_vars  .gitignore  Makefile  README.md  SPIKE_WORKFLOW.md  TO_DO.md  lint_final.txt  lint_output.txt  lint_output_2.txt  lint_success.txt  main.py  pyproject.toml
.github/workflows/: ci.yml
spikes/: INDEX.md  TEMPLATE.md
spikes/000_stdio/: README.md  main_mcp_server.py
spikes/001_demos/: README.md  main_mcp_server.py  main_server.py  stdio_server.py  stream_config.py  test_001_demos.py  test_stream_config.py  try_main_server.py  try_stream_config.py
spikes/002_logging/: README.md  clean_server.py  logging_config.py  main_mcp_server.py  main_server.py  run.sh  test_002_logging.py
spikes/003_docker/: Dockerfile  Makefile  README.md  docker-compose.yml  main_mcp_server.py  main_server.py  nginx-gateway.conf
spikes/004_csv_data/: Dockerfile  Makefile  docker-compose.yml  main_server.py  nginx-gateway.conf  packages.csv
spikes/004_post_office/: Dockerfile  Makefile  README.md  docker-compose.yml  main_server.py  packages.csv
spikes/005_logserver/: Dockerfile.test  Makefile  docker-compose.yml  log_mcp_server.py  nginx-gateway.conf
spikes/006_graphdb/: Dockerfile  Makefile  docker-compose.yml  main_server.py
spikes/006_graphdb/docs/: DOCKER_README.md  MCP_SETUP_GUIDE.md  SYSTEM_DESIGN.md  TESTING_GUIDE.md  VECTORIZATION_GUIDE.md
spikes/006_graphdb/graph_data/documents/: README.md  ic_datasheets_reference.md  ps2man.txt  ps3man.txt
spikes/006_graphdb/graph_data/embeddings/: ic_datasheets_reference_embeddings.json  ps2man_embeddings.json  ps3man_embeddings.json
spikes/006_graphdb/pipeline/: extract_pdfs.py  generate_embeddings.py  load_to_neo4j.py  run_pipeline.py  run_pipeline.sh
spikes/006_graphdb/scripts/: start_mcp_server.sh
spikes/006_graphdb/tests/: test_main_server.py  test_pipeline.py
spikes/007_postgres/: Dockerfile  Makefile  README.md  docker-compose.yml  init.sql  main_server.py
spikes/007_postgres/tests/: test_main_server.py
spikes/008_pgvector/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  generate_data.py  init.sql  main_server.py  requirements.txt  test_008_pgvector.py
tests/: test_utils.py
tests/000_stdio/: test_000_main_mcp_server.py
tests/001_demos/: test_001_demos.py  test_coverage_001.py
tests/002_logging/: test_002_logging.py  test_coverage_002.py
tests/003_docker/: test_003_main_mcp_server.py  test_003_main_server.py
tests/004_csv_data/: test_004_main_server.py
tests/006_graphdb/: test_006_main_server.py  test_pipeline.py
tests/007_postgres/: test_007_main_server.py
tests/008_pgvector/: test_008_pgvector.py
