[project]
name = "mcp-studies"
version = "0.1.0"
description = "Various studies and experiments using the mcp package."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Ilja Heitlager", email = "iheitlager@schubergphilis.com"}
]
maintainers = [
    {name = "Ilja Heitlager", email = "iheitlager@schubergphilis.com"}
]
keywords = ["mcp", "model-context-protocol", "experiments", "lab271", "schuberg-philis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp==3.13.2",
    "dotenv==0.9.9",
    "faker==37.12.0",
    "mcp[cli]==1.21.0",
    "pgvector==0.4.1",
    "psycopg2-binary==2.9.11",
    "sentence-transformers==5.1.2",
]



[project.urls]
Homepage = "https://github.com/LAB271/mcp-studies"
Repository = "https://github.com/LAB271/mcp-studies"

[tool.uv]
preview = true
add-bounds = "exact"

[dependency-groups]
dev = [
    "mypy==1.18.2",
    "pytest==9.0.1",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "ruff==0.14.4",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black/ruff formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
